--- a/EichkustMusic.Tracks.Infrastructure/EichkustMusic.Tracks.Infrastructure.csproj
+++ b/EichkustMusic.Tracks.Infrastructure/EichkustMusic.Tracks.Infrastructure.csproj
@@ -10,4 +10,21 @@
     <ProjectReference Include="..\EichkustMusic.Tracks.Application\EichkustMusic.Tracks.Application.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Service Include="{508349b6-6b84-4df5-91f0-309beebad82d}" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Persistence\Migrations\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.7" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.7">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.4" />
+  </ItemGroup>
+
 </Project>
