--- a/EichkustMusic.Tracks.Testing/EichkustMusic.Tracks.Testing.csproj
+++ b/EichkustMusic.Tracks.Testing/EichkustMusic.Tracks.Testing.csproj
@@ -11,15 +11,20 @@
 
   <ItemGroup>
     <PackageReference Include="coverlet.collector" Version="6.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="8.0.7" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0" />
+    <PackageReference Include="Moq" Version="4.20.70" />
+    <PackageReference Include="Moq.EntityFrameworkCore" Version="8.0.1.2" />
     <PackageReference Include="NUnit" Version="3.14.0" />
     <PackageReference Include="NUnit.Analyzers" Version="3.9.0" />
     <PackageReference Include="NUnit3TestAdapter" Version="4.5.0" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\EichkustMusic.Tracks.API\EichkustMusic.Tracks.API.csproj" />
     <ProjectReference Include="..\EichkustMusic.Tracks.Application\EichkustMusic.Tracks.Application.csproj" />
     <ProjectReference Include="..\EichkustMusic.Tracks.Domain\EichkustMusic.Tracks.Domain.csproj" />
+    <ProjectReference Include="..\EichkustMusic.Tracks.Infrastructure\EichkustMusic.Tracks.Infrastructure.csproj" />
   </ItemGroup>
 
   <ItemGroup>
