--- a/EichkustMusic.Tracks.Infrastructure/EichkustMusic.Tracks.Infrastructure.csproj
+++ b/EichkustMusic.Tracks.Infrastructure/EichkustMusic.Tracks.Infrastructure.csproj
@@ -19,6 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="AWSSDK.S3" Version="3.7.310.6" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.7" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.7">
       <PrivateAssets>all</PrivateAssets>
