--- a/EichkustMusic.Tracks.Testing/EichkustMusic.Tracks.Testing.csproj
+++ b/EichkustMusic.Tracks.Testing/EichkustMusic.Tracks.Testing.csproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <PackageReference Include="coverlet.collector" Version="6.0.0" />
+    <PackageReference Include="DotNetEnv" Version="3.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="8.0.7" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0" />
     <PackageReference Include="Moq" Version="4.20.70" />
@@ -29,6 +30,11 @@
 
   <ItemGroup>
     <Using Include="NUnit.Framework" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="bin\Debug\net8.0\.env" />
+    <None Include="bin\Debug\net8.0\testsettings.json" />
   </ItemGroup>
 
 </Project>
