Patch method that deletes old files from S3 for AlbumRepository and TrackRepository written and tested

--- a/EichkustMusic.Tracks.Application/EichkustMusic.Tracks.Application.csproj
+++ b/EichkustMusic.Tracks.Application/EichkustMusic.Tracks.Application.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="8.0.7" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\EichkustMusic.Tracks.Domain\EichkustMusic.Tracks.Domain.csproj" />
   </ItemGroup>
 
