EichkustMusic.S3 package integrated

--- a/EichkustMusic.Tracks.Infrastructure/EichkustMusic.Tracks.Infrastructure.csproj
+++ b/EichkustMusic.Tracks.Infrastructure/EichkustMusic.Tracks.Infrastructure.csproj
@@ -19,7 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="AWSSDK.S3" Version="3.7.310.6" />
+    <PackageReference Include="EichkustMusic.S3" Version="1.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.7" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.7">
       <PrivateAssets>all</PrivateAssets>
